Plugin Name: BuddyPress Group Calendar
Author: Aaron Edwards (Incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.4.5 - 9/2/2015 Aaron
----------------------------------------------------------------------
- Fix: CSS conflict with Twentyfifteen theme theme update in WP4.3
- Fix: Saving of 24hr time converting to 12hr when editing events

1.4.4 - 8/27/2015 Hoang, Aaron
----------------------------------------------------------------------
- Fix: Support for UTF8 group name slugs
- Fix: Detection of 24hr time format settings when editing events

1.4.3 - 8/14/2015 Hoang, Aaron
----------------------------------------------------------------------
- Fix: Events disappearing too soon in widgets
- Fix: Missing horizontal line in Group Admin settings

1.4.2 - 10/14/2014
----------------------------------------------------------------------
- Fix: Improve the check for 24hr time localization to work with custom format strings

1.4.1 - 9/4/2014
----------------------------------------------------------------------
- Fix: More timezone issues with highlighted events in the calendars
- Fix: Various PHP notices

1.4 - 9/1/2014
----------------------------------------------------------------------
- Fix: Highlighted events in the calendars were showing as UTC.

1.3.9 - 5/19/2014
----------------------------------------------------------------------
- Fix: Dates were being output in the wrong timezone

1.3.8 - 3/19/2014
----------------------------------------------------------------------
- Fix: Entities problem with quotes in event emails http://wp.mu/91j
- Fix: Timezone issues. Force storing time as GMT, then always display with timezone offset. http://wp.mu/91i

1.3.7 - 2/28/2014
----------------------------------------------------------------------
- Graceful handling when Groups module is not enabled

1.3.6 - 6/27/2013