@@ -118,7 +118,7 @@ if ( class_exists( 'BP_Group_Extension' ) ) {
 
 		}
 
-		function display() {
+		function display( $group_id = NULL ) {
 			global $bp;
 			$event_id = bp_group_calendar_event_url_parse();
 
@@ -1433,7 +1433,7 @@ class BP_Group_Calendar_Widget extends WP_Widget {
 			'classname'   => 'bp_group_calendar',
 			'description' => __( 'Displays upcoming public group events.', 'groupcalendar' )
 		);
-		$this->WP_Widget( 'bp_group_calendar', __( 'Group Events', 'groupcalendar' ), $widget_ops );
+		parent::__construct( 'bp_group_calendar', __( 'Group Events', 'groupcalendar' ), $widget_ops );
 	}
 
 	function widget( $args, $instance ) {
@@ -1513,7 +1513,7 @@ class BP_Group_Calendar_Widget_Single extends WP_Widget {
 			'classname'   => 'bp_group_calendar_single',
 			'description' => __( 'Displays upcoming group events for a single group.', 'groupcalendar' )
 		);
-		$this->WP_Widget( 'bp_group_calendar_single', __( 'Single Group Events', 'groupcalendar' ), $widget_ops );
+		parent::__construct( 'bp_group_calendar_single', __( 'Single Group Events', 'groupcalendar' ), $widget_ops );
 	}
 
 	function widget( $args, $instance ) {
@@ -1607,7 +1607,7 @@ class BP_Group_Calendar_Widget_User_Groups extends WP_Widget {
 			'classname'   => 'bp_group_calendar_user_groups',
 			'description' => __( 'Displays upcoming group events for a logged in user\'s groups.', 'groupcalendar' )
 		);
-		$this->WP_Widget( 'bp_group_calendar_user_groups', __( 'User\'s Group Events', 'groupcalendar' ), $widget_ops );
+		parent::__construct( 'bp_group_calendar_user_groups', __( 'User\'s Group Events', 'groupcalendar' ), $widget_ops );
 	}
 
 	function widget( $args, $instance ) {
